# CanfieldSolitaire

./: .gitignore  CMakeLists.txt  README.md
include/: card.h  deck.h  game.h  pile.h
src/: card.cpp  card.h  deck.cpp  deck.h  game.cpp  main.cpp  pile.cpp  pile.h
